# glamai

./: .env.example  DASHBOARD_STATUS.md  Dockerfile  GLAMAI.md  Makefile  README.md  docker-compose.yml  pyproject.toml
dashboard/: .env.example  IMPLEMENTATION_SPEC.md  PROGRESS.md  package.json  tailwind.config.ts
dashboard/src/app/: globals.css  layout.tsx  page.tsx
dashboard/src/app/admin/: layout.tsx  page.tsx
dashboard/src/app/admin/onboarding/: page.tsx
dashboard/src/app/client/: layout.tsx  page.tsx
dashboard/src/components/admin/: funnel-chart.tsx  header.tsx  health-score.tsx  journey-timeline.tsx  sidebar.tsx
dashboard/src/components/ui/: avatar.tsx  badge.tsx  button.tsx  card.tsx  empty-state.tsx  progress.tsx  skeleton.tsx  stat-card.tsx  status-badge.tsx  table.tsx  tabs.tsx
dashboard/src/lib/: api.ts  utils.ts
dashboard/src/types/: index.ts
docs/: ai-agent-accuracy-fix.md  guarantee-framework.md  harness-engineering-analysis.md  pricing.md  territory-rules.md
scripts/: bootstrap_db.py  seed_demo_data.py
src/: config.py  database.py  main.py
src/api/v1/: admin.py  gbp.py  leads.py  orgs.py  territory.py  tracking.py
src/models/: __init__.py  gbp.py  journey.py  lead.py  notification.py  org.py  report.py  territory.py
src/services/ai/: lead_qualifier.py
src/services/gbp/: client.py  optimizer.py
src/services/reports/: generator.py
src/services/territory/: checker.py
src/services/whatsapp/: client.py  templates.py  webhook.py
src/tasks/: celery_app.py  gbp_tasks.py  notification_tasks.py  report_tasks.py
(+10 files in other folders)
